Add more user-friendly checks for output file compression options
 * No longer assert fail if the level is outside the allowed range
 * Actually check that a valid compression method has been provided
 * Failing either check will result in NULL being returned by
   trace_open_file_out and the libtrace error being set appropriately
 * Added TRACE_OPTION_COMPRESSTYPE_LAST to compression method enum, so
   we can always easily tell if the value is outside the expected range.

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -1209,7 +1209,8 @@ typedef enum {
 	TRACE_OPTION_COMPRESSTYPE_NONE = 0, /**< No compression */
 	TRACE_OPTION_COMPRESSTYPE_ZLIB = 1, /**< GZip Compression */
 	TRACE_OPTION_COMPRESSTYPE_BZ2  = 2, /**< BZip2 Compression */
-	TRACE_OPTION_COMPRESSTYPE_LZO  = 3  /**< LZO Compression */
+	TRACE_OPTION_COMPRESSTYPE_LZO  = 3,  /**< LZO Compression */
+        TRACE_OPTION_COMPRESSTYPE_LAST
 } trace_option_compresstype_t;
 
 /** Valid configuration options for output traces */
