--- a/tools/tracestats/Makefile.am
+++ b/tools/tracestats/Makefile.am
@@ -1,4 +1,4 @@
-bin_PROGRAMS = tracestats
+bin_PROGRAMS = tracestats tracestats_parallel
 bin_SCRIPTS = tracesummary
 
 man_MANS = tracestats.1 tracesummary.1
@@ -6,3 +6,4 @@ EXTRA_DIST = $(man_MANS) $(bin_SCRIPTS)
 
 include ../Makefile.tools
 tracestats_SOURCES = tracestats.c
+tracestats_parallel_SOURCES = tracestats_parallel.c
