--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -195,6 +195,13 @@ typedef struct libtrace_t libtrace_t;
 /** Opaque structure holding information about a bpf filter */
 typedef struct libtrace_filter_t libtrace_filter_t;
 
+/** Opaque structure holding information about a result */
+typedef struct libtrace_result_t libtrace_result_t;
+
+typedef struct libtrace_message_t libtrace_message_t;
+
+typedef struct libtrace_thread_t libtrace_thread_t;
+
 /** If the packet has allocated its own memory the buffer_control should be
  * set to TRACE_CTRL_PACKET, so that the memory will be freed when the packet
  * is destroyed. If the packet has been zerocopied out of memory owned by
@@ -480,6 +487,9 @@ typedef struct libtrace_packet_t {
 	void *l4_header;		/**< Cached transport header */
 	uint8_t transport_proto;	/**< Cached transport protocol */
 	uint32_t l4_remaining;		/**< Cached transport remaining */
+	uint64_t order; /**< Notes the order of this packet in relation to the input */
+	uint64_t hash; /**< A hash of the packet as supplied by the user */
+	int error; /**< The error status of pread_packet */
 } libtrace_packet_t;
 
 
@@ -3096,6 +3106,118 @@ DLLEXPORT bool trace_get_wireless_antenna(void *linkptr,
         libtrace_linktype_t linktype, uint8_t *antenna);
 
 /*@}*/
+
+typedef void* (*fn_per_pkt)(libtrace_t* trace, libtrace_packet_t *p, libtrace_message_t *m, libtrace_thread_t *thread);
+typedef void* (*fn_reducer)(libtrace_t* trace, void* global_blob);
+typedef uint64_t (*fn_hasher)(libtrace_packet_t* packet, void *data);
+
+DLLEXPORT int trace_pstart(libtrace_t *libtrace, void* global_blob, fn_per_pkt per_pkt, fn_reducer reducer);
+DLLEXPORT int trace_pread_packet(libtrace_t *libtrace, libtrace_packet_t **packet);
+DLLEXPORT int trace_ppause(libtrace_t *libtrace);
+DLLEXPORT int trace_pstop(libtrace_t *libtrace);
+DLLEXPORT void trace_join(libtrace_t * trace);
+DLLEXPORT inline void print_contention_stats (libtrace_t *libtrace);
+DLLEXPORT libtrace_result_t *trace_create_result();
+
+typedef struct libtrace_result_t {
+	uint64_t key;
+	void * value;
+} libtrace_result_t;
+
+DLLEXPORT inline void libtrace_result_set_key(libtrace_result_t * result, uint64_t key);
+DLLEXPORT inline uint64_t libtrace_result_get_key(libtrace_result_t * result);
+DLLEXPORT inline void libtrace_result_set_value(libtrace_result_t * result, void * value);
+DLLEXPORT inline void* libtrace_result_get_value(libtrace_result_t * result);
+DLLEXPORT inline void libtrace_result_set_key_value(libtrace_result_t * result, uint64_t key, void * value);
+DLLEXPORT void trace_destroy_result(libtrace_result_t ** result);
+
+// Ways to access Global and TLS  storage that we provide the user
+DLLEXPORT void * trace_get_global(libtrace_t *trace);
+DLLEXPORT void * trace_set_global(libtrace_t *trace, void * data);
+DLLEXPORT void * trace_set_tls(libtrace_thread_t *t, void * data);
+DLLEXPORT void * trace_get_tls(libtrace_thread_t *t);
+
+DLLEXPORT void trace_publish_result(libtrace_t *libtrace, uint64_t key, void * value);
+typedef struct libtrace_vector libtrace_vector_t;
+DLLEXPORT int trace_get_results(libtrace_t *libtrace, libtrace_vector_t * results);
+
+DLLEXPORT libtrace_result_t *trace_create_result();
+DLLEXPORT int libtrace_thread_get_message_count(libtrace_t * libtrace);
+DLLEXPORT int libtrace_thread_get_message(libtrace_t * libtrace, libtrace_message_t * message);
+DLLEXPORT int libtrace_thread_try_get_message(libtrace_t * libtrace, libtrace_message_t * message);
+DLLEXPORT int trace_send_message_to_reducer(libtrace_t * libtrace, libtrace_message_t * message);
+DLLEXPORT int trace_finished(libtrace_t * libtrace);
+DLLEXPORT uint64_t trace_packet_get_order(libtrace_packet_t * packet);
+DLLEXPORT uint64_t trace_packet_get_hash(libtrace_packet_t * packet);
+DLLEXPORT void trace_packet_set_order(libtrace_packet_t * packet, uint64_t order);
+DLLEXPORT void trace_packet_set_hash(libtrace_packet_t * packet, uint64_t hash);
+
+
+typedef enum {
+	/** 
+	 * Sets the hasher function, if NULL(default) no hashing is used a
+	 * cores will get packets on a first in first served basis
+	 */
+	TRACE_OPTION_SET_HASHER,
+	
+	/**
+	 * See diagrams, this sets the maximum size of freelist used to 
+	 * maintain packets and there memory buffers.
+	 * NOTE setting this to less than recommend could cause deadlock a
+	 * trace that manages its own packets.
+	 * A unblockable error message will be printed.
+	 */
+	TRACE_OPTION_SET_PACKET_FREELIST_SIZE,
+	
+	/**
+	 * See diagrams, this sets the maximum size of buffers used between
+	 * the single hasher thread and the buffer.
+	 * NOTE setting this to less than recommend could cause deadlock a
+	 * trace that manages its own packets.
+	 * A unblockable warning message will be printed to stderr in this case.
+	 */
+	TRACE_OPTION_SET_MAPPER_BUFFER_SIZE,
+	
+	/**
+	 * Libtrace set mapper thread count
+	 */
+	TRACE_OPTION_SET_MAPPER_THREAD_COUNT,
+	
+	/**
+	 * Libtrace should expect sequential keys from the output to count
+	 * up starting numbered from 1, 2, 3 ... 
+	 * such as is the case with numbered packets.
+	 * 
+	 * ALSO consider - TRACE_OPTIONS_ORDERED_RESULTS suitable for live formats
+	 */
+	 TRACE_OPTION_SEQUENTIAL,
+	 
+	 /**
+	  * Libtrace ordered results, results in each queue are ordered by key
+	  * however my not be sequential, a typically case is packet timestamps
+	  * the reducer will receive packets in order - note threasholds
+	  * will be used such that a empty queue wont break things
+	  */
+	 TRACE_OPTION_ORDERED,
+	 
+	 
+	 /**
+	  * When accepting ordered results if a threashold is meet before an
+	  * older result is available from another queue drop that packet
+	  */
+	  TRACE_DROP_OUT_OF_ORDER,
+	  
+	  /**
+	   * If set to true (i.e. 1) the trace starts a dedicated hasher thread
+	   */
+	  TRACE_OPTION_USE_DEDICATED_HASHER,
+	  TRACE_OPTION_USE_SLIDING_WINDOW_BUFFER,
+	  TRACE_OPTION_TRACETIME
+} trace_parallel_option_t;
+
+DLLEXPORT int trace_parallel_config(libtrace_t *libtrace, trace_parallel_option_t option, void *value);
+DLLEXPORT libtrace_packet_t* trace_result_packet(libtrace_t * libtrace, libtrace_packet_t * packet);
+DLLEXPORT void trace_free_result_packet(libtrace_t * libtrace, libtrace_packet_t * packet);
 
 #ifdef __cplusplus
 } /* extern "C" */
