--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -3215,6 +3215,21 @@ typedef enum {
 	  TRACE_OPTION_TRACETIME
 } trace_parallel_option_t;
 
+enum libtrace_messages {
+	MESSAGE_STARTED,
+	MESSAGE_PAUSE,
+	MESSAGE_STOP,
+	MESSAGE_STOPPED,
+	MESSAGE_FIRST_PACKET,
+	MESSAGE_MAPPER_ENDED,
+	MESSAGE_MAPPER_RESUMED,
+	MESSAGE_MAPPER_PAUSED,
+	MESSAGE_MAPPER_EOF,
+	MESSAGE_POST_REDUCE,
+	MESSAGE_POST_RANGE,
+	MESSAGE_USER
+};
+
 DLLEXPORT int trace_parallel_config(libtrace_t *libtrace, trace_parallel_option_t option, void *value);
 DLLEXPORT libtrace_packet_t* trace_result_packet(libtrace_t * libtrace, libtrace_packet_t * packet);
 DLLEXPORT void trace_free_result_packet(libtrace_t * libtrace, libtrace_packet_t * packet);
