--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -81,56 +81,6 @@
 #define __LITTLE_ENDIAN	LITTLE_ENDIAN
 #endif
 
-#ifdef _MSC_VER
-    /* define the following from MSVC's internal types */
-    typedef		__int8	int8_t;
-    typedef		__int16	int16_t;
-    typedef		__int32	int32_t;
-    typedef		__int64	int64_t;
-    typedef unsigned 	__int8	uint8_t;
-    typedef unsigned	__int16 uint16_t;
-    typedef unsigned	__int32 uint32_t;
-    typedef unsigned	__int64 uint64_t;
-    #ifdef LT_BUILDING_DLL
-	#define DLLEXPORT __declspec(dllexport)
-    #else
-	#define DLLEXPORT __declspec(dllimport)
-    #endif
-    #define DLLLOCAL
-    /* Windows pads bitfields out to to the size of their parent type
-     * however gcc warns that this doesn't meet with the iso C specification
-     * so produces warnings for this behaviour.  sigh.
-     */
-    #define LT_BITFIELD8 	uint8_t
-    #define LT_BITFIELD16 	uint16_t
-    #define LT_BITFIELD32 	uint32_t
-    #define LT_BITFIELD64 	uint64_t
-#else
-    #ifdef HAVE_STDINT_H
-	#   include <stdint.h>
-    #endif
-    #if __GNUC__ >= 4
-	#ifdef LT_BUILDING_DLL
-		#define DLLEXPORT __attribute__ ((visibility("default")))
-		#define DLLLOCAL __attribute__ ((visibility("hidden")))
-	#else
-		#define DLLEXPORT
-		#define DLLLOCAL
-	#endif
-    #else
-	#define DLLEXPORT
-	#define DLLLOCAL
-    #endif
-    /* GCC warns if the bitfield type is not "unsigned int", however windows
-     * generates incorrect code for this (see above), so we define these
-     * macros.  How Hideous.  So much for C's portability.
-     */
-    #define LT_BITFIELD8 	unsigned int
-    #define LT_BITFIELD16 	unsigned int
-    #define LT_BITFIELD32 	unsigned int
-    #define LT_BITFIELD64 	unsigned int
-#endif
-
 #ifdef WIN32
 #   include <winsock2.h>
 #   include <ws2tcpip.h>
@@ -169,8 +119,43 @@
 extern "C" { 
 #endif
 
+#ifdef _MSC_VER
+    /* define the following from MSVC's internal types */
+    typedef             __int8  int8_t;
+    typedef             __int16 int16_t;
+    typedef             __int32 int32_t;
+    typedef             __int64 int64_t;
+    typedef unsigned    __int8  uint8_t;
+    typedef unsigned    __int16 uint16_t;
+    typedef unsigned    __int32 uint32_t;
+    typedef unsigned    __int64 uint64_t;
+    
+    /* Windows pads bitfields out to to the size of their parent type
+     * however gcc warns that this doesn't meet with the iso C specification
+     * so produces warnings for this behaviour.  sigh.
+     */
+    #define LT_BITFIELD8        uint8_t
+    #define LT_BITFIELD16       uint16_t
+    #define LT_BITFIELD32       uint32_t
+    #define LT_BITFIELD64       uint64_t
+#else
+    #ifdef HAVE_STDINT_H
+        #   include <stdint.h>
+    #endif
+    /* GCC warns if the bitfield type is not "unsigned int", however windows
+     * generates incorrect code for this (see above), so we define these
+     * macros.  How Hideous.  So much for C's portability.
+     */
+    #define LT_BITFIELD8        unsigned int
+    #define LT_BITFIELD16       unsigned int
+    #define LT_BITFIELD32       unsigned int
+    #define LT_BITFIELD64       unsigned int
+#endif
+
 /* Function does not depend on anything but its
  * parameters, used to hint gcc's optimisations
+ *
+ * TODO: Find a way to check for these that is not gcc-specific
  */
 #if __GNUC__ >= 3 
 #  define DEPRECATED __attribute__((deprecated))
@@ -185,6 +170,26 @@ extern "C" {
 #  define PACKED 
 #  define PRINTF(formatpos,argpos) 
 #endif
+
+#ifdef _MSC_VER
+    #ifdef LT_BUILDING_DLL
+        #define DLLEXPORT __declspec(dllexport)
+    #else
+        #define DLLEXPORT __declspec(dllimport)
+    #endif
+    #define DLLLOCAL
+#else
+    #ifndef DLLEXPORT
+        #if HAVE_VISIBILITY && LT_BUILDING_DLL
+            #define DLLEXPORT __attribute__ ((visibility("default")))
+            #define DLLLOCAL __attribute__ ((visibility("hidden")))
+        #else
+            #define DLLEXPORT
+            #define DLLLOCAL
+        #endif
+    #endif
+#endif
+
 	
 /** Opaque structure holding information about an output trace */
 typedef struct libtrace_out_t libtrace_out_t;
