Added m4 macros to check for gcc compiler attributes
Instead of relying on __GNUC__, we now individually check
whether each attribute is supported by the C compiler and set
preprocessor macros accordingly.

Removed similar attribute definitions from wandio.h, as these are
not used at all by libwandio.

--- a/configure.in
+++ b/configure.in
@@ -110,6 +110,11 @@ CXXFLAGS="$CXXFLAGS -Wall -DLT_BUILDING_DLL=1"
 # Check for -fvisibility
 gl_VISIBILITY
 
+gcc_PACKED
+gcc_DEPRECATED
+gcc_UNUSED
+gcc_PURE
+gcc_FORMAT
 	
 # Check for libtool
 AC_PROG_LIBTOOL
