--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -3236,7 +3236,18 @@ typedef enum {
 	   */
 	  TRACE_OPTION_USE_DEDICATED_HASHER,
 	  TRACE_OPTION_USE_SLIDING_WINDOW_BUFFER,
-	  TRACE_OPTION_TRACETIME
+
+	  /**
+	   * Delays packets so they are played back in trace-time rather than as fast
+	   * as possible.
+	   */
+	  TRACE_OPTION_TRACETIME,
+
+	  /**
+	   * Specifies the interval between tick packets in milliseconds, if 0
+	   * or less this is ignored.
+	   */
+	  TRACE_OPTION_TICK_INTERVAL
 } trace_parallel_option_t;
 
 enum libtrace_messages {
@@ -3258,19 +3269,65 @@ enum libtrace_messages {
 };
 
 enum hasher_types {
-	HASHER_BALANCE, /** Balance load across CPUs best as possible this is basically to say don't care about hash, but this might still might be implemented using a hash or round robin etc.. */
-	HASHER_BIDIRECTIONAL, /** Use a hash which is uni-directional for TCP flows (IP src dest,TCP port src dest), non TCP
-							Will be sent to the same place, with the exception of UDP which may or may not be sent to separate cores */
-	HASHER_UNIDIRECTIONAL, /** Use a hash which is uni-directional across TCP flow */
-	HASHER_CUSTOM, /** Always use the user supplied hasher */
-	HASHER_HARDWARE, /** Set by the format if the hashing is going to be done in hardware */
+	/** 
+	 * Balance load across CPUs best as possible, this is basically to say do 
+	 * not care about hash. This might still might be implemented
+	 * using a hash or round robin etc. under the hood depending on the format
+	 */
+	HASHER_BALANCE,
+
+	/** Use a hash which is bi-directional for TCP flows, that is packets with
+	 * the same hash are sent to the same thread. All non TCP packets will be
+	 * sent to the same thread. UDP may or may not be sent to separate
+	 * threads like TCP, this depends on the format support.
+	 */
+	HASHER_BIDIRECTIONAL,
+	
+	/**
+	 * Use a hash which is uni-directional across TCP flows, that means the
+	 * opposite directions of the same 5 tuple might end up on separate cores.
+	 * Otherwise is identical to HASHER_BIDIRECTIONAL
+	 */
+	HASHER_UNIDIRECTIONAL,
+
+	/**
+	 * Always use the user supplied hasher, this currently disables native
+	 * support and is likely significantly slower.
+	 */
+	HASHER_CUSTOM,
+
+	/**
+	 * This is not a valid option, used internally only!!! TODO remove
+	 * Set by the format if the hashing is going to be done in hardware
+	 */
+	HASHER_HARDWARE
 };
+
+typedef struct libtrace_info_t {
+	/** 
+	 * True if a live format (i.e. packets have to be tracetime).
+	 * Otherwise false, indicating packets can be read as fast
+	 * as possible from the format.
+	 */
+	bool live; 
+
+	/**
+	 * The maximum number of threads supported by a parallel trace. 1
+	 * if parallel support is not native (in this case libtrace will simulate
+	 * an unlimited number of threads), -1 means unlimited and 0 unknown.
+	 */
+	int max_threads;
+
+	/* TODO hash fn supported list */
+
+	/* TODO consider time/clock details?? */
+} libtrace_info_t;
 
 DLLEXPORT int trace_parallel_config(libtrace_t *libtrace, trace_parallel_option_t option, void *value);
 DLLEXPORT libtrace_packet_t* trace_result_packet(libtrace_t * libtrace, libtrace_packet_t * packet);
 DLLEXPORT void trace_free_result_packet(libtrace_t * libtrace, libtrace_packet_t * packet);
-enum hasher_types;
 DLLEXPORT int trace_set_hasher(libtrace_t *trace, enum hasher_types type, fn_hasher hasher, void *data);
+DLLEXPORT libtrace_info_t *trace_get_information(libtrace_t * libtrace);
 
 #ifdef __cplusplus
 } /* extern "C" */
