--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -162,6 +162,7 @@ extern "C" {
 #define LT_USE_DEPRECATED @HAVE_ATTRIBUTE_DEPRECATED@
 #define LT_USE_PURE @HAVE_ATTRIBUTE_PURE@
 #define LT_USE_PRINTF @HAVE_ATTRIBUTE_FORMAT@
+#define LT_USE_VISIBILITY @HAVE_VISIBILITY@
 
 #if LT_USE_PACKED
 #  define PACKED __attribute__((packed))
@@ -202,7 +203,7 @@ extern "C" {
     #define DLLLOCAL
 #else
     #ifndef DLLEXPORT
-        #if HAVE_VISIBILITY && LT_BUILDING_DLL
+        #if LT_USE_VISIBILITY && LT_BUILDING_DLL
             #define DLLEXPORT __attribute__ ((visibility("default")))
             #define DLLLOCAL __attribute__ ((visibility("hidden")))
         #else
