--- a/test/Makefile
+++ b/test/Makefile
@@ -10,21 +10,25 @@ CFLAGS += $(INCLUDE)
 libdir = $(PREFIX)/lib/.libs:$(PREFIX)/libpacketdump/.libs
 LDLIBS = -L$(PREFIX)/lib/.libs -L$(PREFIX)/libpacketdump/.libs -ltrace -lpacketdump 
 
-BINS_DATASTRUCT = test-datastruct-vector test-datastruct-deque test-datastruct-ringbuffer
+BINS_DATASTRUCT = test-datastruct-vector test-datastruct-deque \
+	test-datastruct-ringbuffer
+BINS_PARALLEL = test-format-parallel test-format-parallel-hasher \
+	test-format-parallel-singlethreaded test-format-parallel-stressthreads \
+	test-format-parallel-singlethreaded-hasher
 
 BINS = test-pcap-bpf test-event test-time test-dir test-wireless test-errors \
-	test-plen test-autodetect $(BINS_DATASTRUCT)
+	test-plen test-autodetect $(BINS_DATASTRUCT) $(BINS_PARALLEL)
 
 .PHONY: all clean distclean install depend test
 
-all: $(BINS) test-drops test-format test-format-parallel test-decode test-decode2 test-write test-convert test-convert2
+all: $(BINS) test-drops test-format test-decode test-decode2 test-write test-convert test-convert2
 
 clean:
-	$(RM) $(BINS) $(OBJS) test-format test-format-parallel test-decode test-convert \
+	$(RM) $(BINS) $(OBJS) test-format test-decode test-convert \
 	test-decode2 test-write test-drops test-convert2
 
 distclean:
-	$(RM) $(BINS) $(OBJS) test-format test-format-parallel test-decode test-convert test-drops test-convert2
+	$(RM) $(BINS) $(OBJS) test-format test-decode test-convert test-drops test-convert2
 
 install:
 	@true
