Remove duplicate macros in libpacketdump
Ensure OSPF libpacketdump module won't segfault or print garbage
if a truncated OSPF header is passed into it.

Renamed 'len' field in OSPF header to 'ospf_len' to avoid
potential conflict with variables named len in libpacketdump
code.

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -866,7 +866,7 @@ typedef struct libtrace_ospf_v2_t
 {
 	uint8_t ospf_v;		/**< OSPF Version, should be 2 */
 	uint8_t type;		/**< OSPF Packet Type */
-	uint16_t len;		/**< Packet length, including OSPF header */
+	uint16_t ospf_len;	/**< Packet length, including OSPF header */
 	struct in_addr router;	/**< Router ID of the packet source */
 	struct in_addr area;	/**< Area the packet belongs to */
 	uint16_t sum;		/**< Checksum */
