Change lzma configure check to find dev header
We need the development headers as well as the library, so
checking for just the library can result in a failed build
down the line.

--- a/configure.in
+++ b/configure.in
@@ -584,7 +584,7 @@ AC_ARG_WITH([lzma],
 
 AS_IF([test "x$with_lzma" != "xno"],
 	[
-	AC_CHECK_LIB(lzma, lzma_code, have_lzma=yes, have_lzma=no)
+	AC_CHECK_HEADER(lzma.h, have_lzma=yes, have_lzma=no)
 	], [have_lzma=no])
 
 AS_IF([test "x$have_lzma" = "xyes"], [
