Add LZMA output support to libtrace tools
Add a configuration option for LZMA output as well.

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -1238,6 +1238,7 @@ typedef enum {
 	TRACE_OPTION_COMPRESSTYPE_ZLIB = 1, /**< GZip Compression */
 	TRACE_OPTION_COMPRESSTYPE_BZ2  = 2, /**< BZip2 Compression */
 	TRACE_OPTION_COMPRESSTYPE_LZO  = 3,  /**< LZO Compression */
+	TRACE_OPTION_COMPRESSTYPE_LZMA  = 4,  /**< LZO Compression */
         TRACE_OPTION_COMPRESSTYPE_LAST
 } trace_option_compresstype_t;
 
