--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -194,6 +194,10 @@ extern "C" {
 #  define PRINTF(formatpos, argpos)
 #endif
 
+// Used to fight against false sharing
+#define CACHE_LINE_SIZE 64
+#define ALIGN_STRUCT(x) __attribute__((aligned(x)))
+
 #ifdef _MSC_VER
     #ifdef LT_BUILDING_DLL
         #define DLLEXPORT __declspec(dllexport)
@@ -3162,7 +3166,7 @@ typedef void* (*fn_reducer)(libtrace_t* trace, void* global_blob);
 typedef uint64_t (*fn_hasher)(const libtrace_packet_t* packet, void *data);
 
 DLLEXPORT int trace_pstart(libtrace_t *libtrace, void* global_blob, fn_per_pkt per_pkt, fn_reducer reducer);
-DLLEXPORT int trace_pread_packet(libtrace_t *libtrace, libtrace_packet_t **packet);
+DLLEXPORT int trace_pread_packet(libtrace_t *libtrace, libtrace_thread_t *t, libtrace_packet_t **packet);
 DLLEXPORT int trace_ppause(libtrace_t *libtrace);
 DLLEXPORT int trace_pstop(libtrace_t *libtrace);
 DLLEXPORT void trace_join(libtrace_t * trace);
