--- a/test/Makefile
+++ b/test/Makefile
@@ -11,7 +11,7 @@ libdir = $(PREFIX)/lib/.libs:$(PREFIX)/libpacketdump/.libs
 LDLIBS = -L$(PREFIX)/lib/.libs -L$(PREFIX)/libpacketdump/.libs -ltrace -lpacketdump 
 
 BINS = test-pcap-bpf test-event test-time test-dir test-wireless test-errors \
-	test-plen test-autodetect test-ports test-fragment 
+	test-plen test-autodetect test-ports test-fragment test-live test-live-snaplen
 
 .PHONY: all clean distclean install depend test
 
