Add an object cache with thread local caches All packets used by a trace are put through this. Adds bulk read/write operations to the ringbuffer (used by the object cache) Replace semaphores with condition variables to support these bulk operations. Internally use bulk read operations from a single threaded formats to reduce lock overhead. Replaces the asserts around pthread_* functions with a version that will still run the command if NDEBUG

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -57,7 +57,7 @@ libtrace_la_SOURCES = trace.c trace_parallel.c common.h \
 		$(BPFJITSOURCE) \
 		libtrace_arphrd.h \
 		data-struct/ring_buffer.c data-struct/vector.c data-struct/message_queue.c \
-		data-struct/deque.c data-struct/sliding_window.c \
+		data-struct/deque.c data-struct/sliding_window.c data-struct/object_cache.c \
 		hash_toeplitz.c
 
 if DAG2_4
