--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -114,6 +114,18 @@
 
 /** DAG driver version installed on the current system */
 #define DAG_DRIVER_V "@DAG_VERSION_NUM@"
+
+/**
+  * A version of assert that always runs the first argument even
+  * when not debugging, however only asserts the condition if debugging
+  * Intended for use mainly with pthread locks etc. which have error
+  * returns but *should* never actually fail.
+  */
+#ifdef NDEBUG
+#define ASSERT_RET(run, cond) run
+#else
+#define ASSERT_RET(run, cond) assert(run cond)
+#endif
     
 #ifdef __cplusplus 
 extern "C" { 
@@ -3187,7 +3199,6 @@ typedef void* (*fn_reducer)(libtrace_t* trace, void* global_blob);
 typedef uint64_t (*fn_hasher)(const libtrace_packet_t* packet, void *data);
 
 DLLEXPORT int trace_pstart(libtrace_t *libtrace, void* global_blob, fn_per_pkt per_pkt, fn_reducer reducer);
-DLLEXPORT int trace_pread_packet(libtrace_t *libtrace, libtrace_thread_t *t, libtrace_packet_t **packet);
 DLLEXPORT int trace_ppause(libtrace_t *libtrace);
 DLLEXPORT int trace_pstop(libtrace_t *libtrace);
 DLLEXPORT void trace_join(libtrace_t * trace);
