--- a/configure.in
+++ b/configure.in
@@ -40,7 +40,7 @@ AC_CONFIG_FILES([Makefile lib/Makefile docs/Makefile libpacketdump/Makefile
 	examples/Makefile examples/skeleton/Makefile examples/rate/Makefile
 	examples/stats/Makefile examples/tutorial/Makefile
 	docs/libtrace.doxygen 
-	lib/libtrace.h libwandio/Makefile
+	lib/libtrace.h libwandio/Makefile libwandio/tools/wandiocat/Makefile
 	])
 
 
