Make sure dpdk_libtrace.mk is part of distribution
Richard assures me that DPDK builds will need it, so I'll make sure
it gets distributed :)

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -17,7 +17,7 @@ endif
 else
 DAGSOURCE=
 endif
-EXTRA_DIST=format_dag24.c format_dag25.c
+EXTRA_DIST=format_dag24.c format_dag25.c dpdk_libtrace.mk
 
 if HAVE_LLVM
 BPFJITSOURCE=bpf-jit/bpf-jit.cc 
