--- a/configure.in
+++ b/configure.in
@@ -385,7 +385,7 @@ if test "$want_dpdk" != no; then
 		AC_SUBST([RTE_TARGET])
         AC_SUBST([RTE_SDK])
         # Force dpdk library to be statically linked to allow compiler optimisations
-        LIBTRACE_LIBS="$LIBTRACE_LIBS -Wl,--whole-archive -Wl,-l:libintel_dpdk.a -Wl,--no-whole-archive"
+        LIBTRACE_LIBS="$LIBTRACE_LIBS -Wl,--whole-archive -Wl,-l:libintel_dpdk.a -Wl,--no-whole-archive -Wl,-lm"
 		AC_DEFINE(HAVE_DPDK,1,[conditional for building with DPDK live capture support])
 		libtrace_dpdk=true
 	fi
